-database properties now takes from env -added Dockerfile and docker-compose.yaml (with BD,Server and nginx

--- a/src/main/resources/properties/database_properties.yaml
+++ b/src/main/resources/properties/database_properties.yaml
@@ -1,5 +1,5 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/jira
-    username: jira
-    password: JiraRush
+    url: ${DATABASE_URL}
+    username: ${DATABASE_USER}
+    password: ${DATABASE_PASSWORD}
